--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "i18next": "^20.3.2",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.2.6",
     "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
     "mime": "^2.5.2",
@@ -20,6 +23,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
+    "react-i18next": "^11.11.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
