--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
