--- a/package.json
+++ b/package.json
@@ -14,16 +14,12 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.2.6",
     "lint-staged": "^11.0.0",
-    "lodash": "^4.17.21",
-    "mime": "^2.5.2",
-    "nanoid": "^3.1.23",
-    "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
-    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
     "react-i18next": "^11.11.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -64,10 +60,8 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.171",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
-    "@types/react-datepicker": "^4.1.1",
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
